--- a/nginx_modules.yaml
+++ b/nginx_modules.yaml
@@ -1,7 +1,8 @@
 dymanic_modules:
   # ! name should be same as module .so object name
   - name: ngx_http_naxsi_module
-    url: "https://github.com/wargio/naxsi/releases/download/1.7/naxsi-1.7-src-with-deps.tar.gz"
+    url: "https://github.com/wargio/naxsi/releases/download/$version/naxsi-$version-src-with-deps.tar.gz"
+    version_use_github_latest_release: true
     # build-time dependencies
     build_deps: ""
     # package dependencies
@@ -12,14 +13,17 @@ dymanic_modules:
     config: "naxsi_rules/naxsi_core.rules"
     config_dest: "/etc/nginx/naxsi_rules/naxsi_core.rules"
   - name: ngx_http_geoip2_module
-    url: https://github.com/leev/ngx_http_geoip2_module/archive/refs/tags/3.4.tar.gz
+    url: "https://github.com/leev/ngx_http_geoip2_module/archive/refs/tags/$version.tar.gz"
+    version_use_github_latest_tag: true
     build_deps: "libmaxminddb-dev"
     deps: "libmaxminddb0"
   - name: ngx_http_headers_more_filter_module
-    url: "https://github.com/openresty/headers-more-nginx-module/archive/refs/tags/v0.39.tar.gz"
+    url: "https://github.com/openresty/headers-more-nginx-module/archive/refs/tags/$version.tar.gz"
+    version_use_github_latest_tag: true
     build_deps: ""
     deps: ""
   - name: ngx_http_echo_module
-    url: "https://github.com/openresty/echo-nginx-module/archive/refs/tags/v0.64.tar.gz"
+    url: "https://github.com/openresty/echo-nginx-module/archive/refs/tags/$version.tar.gz"
+    version_use_github_latest_tag: true
     build_deps: ""
     deps: ""
